--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ clap = { version = "4.0.29", features = ["derive"] }
 color-eyre = "0.6.2"
 itertools = "0.10.5"
 nom = "7.1.1"
+ordered-float = "3.4.0"
 petgraph = "0.6.2"
+rayon = "1.6.1"
